
We reduced the scope for running spec directories, files, a single file or individual spec in TextMate to source.ruby.rspec. This allowed us to restore the standard Ruby shortcuts:

CMD-R runs all the specs in one file
CMD-SHIFT-R runs an individual spec
CMD-OPT-R runs any files or directories selected in the TextMate drawer

* Applied [#14043] Change output ordering to show pending before errors (Patch from Mike Mangino)
* Applied [#14095] Don't have ./script/generate rspec create previous_failures.txt (Patch from Bryan Helmkamp)
* Applied [#14254] Improved error handling for Object#should and Object#should_not (Patch from Antti Tarvainen)
* Applied [#14186] Remove dead code from message_expecation.rb (Patch from Antti Tarvainen)
* Applied [#14183] Tiny improvement on mock_spec.rb (Patch from Antti Tarvainen)
* Applied [#14208] Fix to Mock#method_missing raising NameErrors instead of MockExpectationErrors (Patch from Antti Tarvainen)
* Applied [#14255] Fixed examples in mock_spec.rb and shared_behaviour_spec.rb (Patch from Antti Tarvainen)
* Applied [#14362] partially mocking objects that define == can blow up (Patch from Pat Maddox)
* test_ methods with an arity of 0 defined in a describe block or Example object will be run as an Example, providing a seamless transition from Test::Unit
* Removed BehaviourRunner
* Fixed [#13969] Spec Failures on Trunk w/ Autotest
* Applied [#14156] False positives with should_not (Patch from Antti Tarvainen)
* Applied [#14170] route_for and params_from internal specs fixed (Patch from Antti Tarvainen)
* Fixed [#14166] Cannot build trunk
* Applied [#14142] Fix for bug #11602: Nested #have_tag specifications fails on the wrong line number (Patch from Antti Tarvainen)
* Removed warn_if_no_files argument and feature
* Steps (Given/When/Then) with no blocks are treated as pending
* Applied [#13913] Scenario should treat no code block as pending (Patch from Evan Light)