@@ -1,6 +1,6 @@
 development:
   adapter: sqlite3
-  dbfile: db/development.db
+  database: ":memory:"
 test:
   adapter: sqlite3
-  dbfile: db/test.db
+  database: ":memory:"
