@@ -57,7 +57,7 @@ end
 
 def in_memory_database?
   ENV["RAILS_ENV"] == "test" and 
-  ActiveRecord::Base.connection.class == ActiveRecord::ConnectionAdapters::SQLite3Adapter and
+  ActiveRecord::Base.connection.class.to_s == "ActiveRecord::ConnectionAdapters::SQLite3Adapter" and
   Rails::Configuration.new.database_configuration['test']['database'] == ':memory:'
 end
 
