@@ -13,6 +13,7 @@ CMD-R runs all the specs in one file
 CMD-SHIFT-R runs an individual spec
 CMD-OPT-R runs any files or directories selected in the TextMate drawer
 
+* Fixed [#14527] specs run twice on rails 1.2.4 and rspec/rspec_on_rails trunk
 * Applied [#14043] Change output ordering to show pending before errors (Patch from Mike Mangino)
 * Applied [#14095] Don't have ./script/generate rspec create previous_failures.txt (Patch from Bryan Helmkamp)
 * Applied [#14254] Improved error handling for Object#should and Object#should_not (Patch from Antti Tarvainen)
